--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,14 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Space Shooter</title>
-  </head>
 
-  <body>
-    <script type="module" src="./main.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Space Shooter</title>
+</head>
+
+<body style="margin: 0;">
+  <script type="module" src="main.ts"></script>
+</body>
+
 </html>
