switch to javascript

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body style="margin: 0;">
-  <script type="module" src="main/index.ts"></script>
+  <script type="module" src="main/index.js"></script>
 </body>
 
 </html>
